@@ -3,8 +3,7 @@ package fish.eyebrow.queryj.querypane.headersbox;
 import javafx.fxml.FXML;
 import javafx.scene.layout.VBox;
 
-import java.util.ArrayList;
-import java.util.stream.Collectors;
+import java.util.List;
 
 public class HeadersBoxController {
     @FXML
@@ -12,15 +11,17 @@ public class HeadersBoxController {
 
     @FXML
     private void initialize() {
-        headersContent.getChildren().add(new HeaderItem());
+        HeaderItem headerItem = new HeaderItem();
+        headerItem.getRemoveButton().setDisable(true); // That would be bad.
+        headersContent.getChildren().add(headerItem);
     }
 
-    public ArrayList<HeaderItem> getHeaderItems() {
-        return (ArrayList<HeaderItem>) headersContent.getChildren()
+    public List<HeaderItem> getHeaderItems() {
+        return headersContent.getChildren()
                 .stream()
                 .filter(c -> c instanceof HeaderItem)
                 .map(c -> (HeaderItem) c)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public VBox getHeadersContent() {
